# my-professor

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dev-ledger/: 2026-07-10.jsonl  2026-07-11.jsonl  2026-07-12.jsonl
src/myprofessor/: __main__.py  cli.py  professor.py
tests/: test_cli.py  test_professor.py
