[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-professor"
version = "0.0.1"
description = "Quiz yourself from a document corpus and track mastery per topic — the learn-loop's practice-and-assess step."
authors = [{ name = "Lorenzo Liuzzo", email = "lorenzoliuzzo@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["my-things-core"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "pre-commit>=3"]

[project.scripts]
myprofessor = "myprofessor.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/myprofessor"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.coverage.report]
# Meaningful only now that the package ships a real skeleton; CI runs pytest
# with --cov, so a coverage regression fails the build.
fail_under = 85

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: integration/slow tests, excluded from the fast local loop"]
